:construction_worker: Update Core release and VERSION automation for date and param