@@ -30,6 +30,7 @@ package org.miaixz.bus.core.lang.loader;
 import java.io.File;
 import java.io.IOException;
 import java.net.JarURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.Collections;
 import java.util.Enumeration;
@@ -154,7 +155,7 @@ public class StdLoader extends ResourceLoader implements Loader {
                         int index = spec.lastIndexOf(Normal.JAR_URL_SEPARATOR);
                         if (index < 0)
                             continue;
-                        set.add(new URL(url, spec.substring(0, index + Normal.JAR_URL_SEPARATOR.length())));
+                        set.add(URI.create(spec.substring(0, index + Normal.JAR_URL_SEPARATOR.length())).toURL());
                     }
                 }
                 return Collections.enumeration(set);
@@ -177,7 +178,8 @@ public class StdLoader extends ResourceLoader implements Loader {
                     try {
                         String uri = UrlDecoder.decode(url.getPath(), Charset.UTF_8);
                         String root = uri.substring(0, uri.lastIndexOf(path));
-                        URL context = new URL(url, Normal.FILE_URL_PREFIX + UrlEncoder.encodeAll(root, Charset.UTF_8));
+                        URL context = URI.create(Normal.FILE_URL_PREFIX + UrlEncoder.encodeAll(root, Charset.UTF_8))
+                                .toURL();
                         File file = new File(root);
                         resources = new FileLoader(context, file).load(path, recursively, filter);
                         return hasMoreElements();
@@ -188,7 +190,8 @@ public class StdLoader extends ResourceLoader implements Loader {
                     try {
                         String uri = UrlDecoder.decode(url.getPath(), Charset.UTF_8);
                         String root = uri.substring(0, uri.lastIndexOf(path));
-                        URL context = new URL(url, Normal.JAR_URL_PREFIX + UrlEncoder.encodeAll(root, Charset.UTF_8));
+                        URL context = URI.create(Normal.JAR_URL_PREFIX + UrlEncoder.encodeAll(root, Charset.UTF_8))
+                                .toURL();
                         JarURLConnection jarURLConnection = (JarURLConnection) url.openConnection();
                         JarFile jarFile = jarURLConnection.getJarFile();
                         resources = new JarLoader(context, jarFile).load(path, recursively, filter);
